Update to Javascript tab syntax higlighting change (#145) to ensure contents are visible when tab is selected

--- a/qbjs-ide.css
+++ b/qbjs-ide.css
@@ -296,7 +296,7 @@ dialog pre { font-family: dosvga; }
     right: 3px;
 }
 #js-code {
-    overflow-y: hidden;
+    overflow: hidden;
     top: 30px;
 }
 
